Fixed Load more button visibility issue. Loader adjustments

--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,6 +1,6 @@
 .wrapper {
-  padding-top: 32px;
-  padding-bottom: 64px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   margin: auto;
 }
 
